Bug 687393 - HTML select options gets relation from containing label, r=tbsaunde