accessible/src/base/nsFormControlAccessible.h
@@ -63,6 +63,9 @@ public:
 
   // nsAccessible
   virtual PRUint32 NativeRole();
+
+  // Widgets
+  virtual bool IsWidget() const;
 };
 
 /**
@@ -85,6 +88,9 @@ public:
   virtual PRUint8 ActionCount();
 
   enum { eAction_Click = 0 };
+
+  // Widgets
+  virtual bool IsWidget() const;
 };
 
 
